--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -36,12 +36,7 @@
 						<div class="inner">
 							<h1>Ayoub Hebbaj</h1>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								Hi, I'm a <b id='whoami'></b>.
 							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Projects</a></li>
@@ -185,6 +180,7 @@
 			<script src="{% static 'portfolio/assets/js/util.js' %}"></script>
 			<script src="{% static 'portfolio/assets/js/main.js' %}"></script>
 			<script src="{% static 'portfolio/assets/js/scripts.js' %}"></script>
+		        <script src="{% static 'portfolio/assets/js/whoami.js' %}"></script>
 			{% if msg_sent %}
 			<div class="notify none do-show" data-notification-status="success">Your Message Was Sent Successefully :D</div>
 			<script>
