--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -75,7 +75,7 @@
 					<section id="two" class="wrapper style3 fade-up page3">
 						<div class="inner">
 							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Skills.</p>
 							<div class="features">
 								{% for skill in skills %}
 								<section>
@@ -93,9 +93,6 @@
 								</section>
 								{% endfor %}
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
@@ -105,7 +102,7 @@
 					<section id="three" class="wrapper style1 fade-up page3">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Contact me.</p>
 							<div class="split style1">
 								<section> 
 									<form method="POST" id="sent">{% csrf_token %}
@@ -130,15 +127,6 @@
 								</section>
 								<section>
 									<ul class="contact">
-										<li>
-											<h3>Email</h3>
-											<a href="">Hebbaj@th3md.com</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(212) 615-092333</span>
-										</li>
-										<li>
 											<h3>Social</h3>
 											<ul class="icons">
 												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
@@ -146,7 +134,7 @@
 													<span class="label">Facebook</span></a></li>
 												<li><a href="https://github.com/M3nti0nl3ss" class="icon brands fa-github" target="_blank">
 													<span class="label">GitHub</span></a></li>
-												<li><a href="https://www.instagram.com/ayoub.hebbaj" class="icon brands fa-instagram" target="_blank">
+												<li><a href="https://www.instagram.com/ahebbaj" class="icon brands fa-instagram" target="_blank">
 													<span class="label">Instagram</span></a></li>
 												<li><a href="https://linkedin.com/in/ayoub-hebbaj" class="icon brands fa-linkedin-in" target="_blank">
 													<span class="label">LinkedIn</span></a></li>
