--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -18,8 +18,8 @@
 							<li><img src="{% static 'portfolio/images/avatar.jpg' %}" class="avatar"></li>
 							<li><h3><b>Ayoub Hebbaj</b></h3></li>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
+							<li><a href="#one">Who am I</a></li>
+							<li><a href="#two">What I do</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
