--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -154,7 +154,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; HEBBAJ. All rights reserved.</li>
+						<li>&copy; <a href="https://ahebbaj.me" target="_blank">HEBBAJ</a>. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
